MARP-2246 color mapping for data table (#114)